# SplitMind-AI

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.ja.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: agent_config.yaml
configs/personas/: angelic_but_deliberate.yaml  cold_attached_idol.yaml  irresistibly_sweet_center_heroine.yaml  warm_guarded_companion.yaml
docs/: concept.en.md  concept.md  paper-summary.md
docs/eval/: persona-separation-improvement-plan.md  persona-separation-phase2-7-validation.md  persona-separation-report.md  persona-separation-tasklist.md
docs/implementation-plan/: 01-foundation-and-contract-model.en.md  01-foundation-and-contract-model.md  02-runtime-memory-and-ui.en.md  02-runtime-memory-and-ui.md  03-evaluation-and-hardening.en.md  03-evaluation-and-hardening.md  04-vault-memory-redesign.en.md  04-vault-memory-redesign.md  05-indirect-expression-naturalness.en.md  05-indirect-expression-naturalness.md  06-implementation-tasklist.en.md  06-implementation-tasklist.md  06-psychology-agent-fusion-roadmap.en.md  06-psychology-agent-fusion-roadmap.md  07-performance-tension-and-response-length.en.md  07-performance-tension-and-response-length.md  08-drive-and-instinct-loop.en.md  08-drive-and-instinct-loop.md  README.en.md  README.md  (+9 more)
guides/: README.en.md  README.md  concept.en.md  concept.md  implementation-overview.en.md  implementation-overview.md  streamlit-ui.en.md  streamlit-ui.md
(+101 files in other folders)
